agvs in plan repair CA now move according to priority, not reservations